Image cropper  scrolling fixed, answer details  dialog hover issue fixed, virtual store decimal point fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/dialog-modal/dialog.component.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/dialog-modal/dialog.component.css
@@ -7,6 +7,7 @@
     margin: 20px auto;
     flex-grow: 1;
     position:relative;
+    overflow:visible;
 }
 
     .dialog p {
